--- a/html_css/img1.html
+++ b/html_css/img1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     .imagem-fundo {
-      background: url('https://images.unsplash.com/photo-1605902711622-cfb43c443afa') center/cover no-repeat;
+      background: url('https://images.pexels.com/photos/11959900/pexels-photo-11959900.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') center/cover no-repeat;
       height: 400px;
       width: 100%;
       display: flex;
