--- a/html_css/img2.html
+++ b/html_css/img2.html
@@ -12,9 +12,11 @@
             margin: 0;
             padding: 0;
         }
-
+        :root{
+            --imagem-fundo: url('harley1.jpg');
+        }
         body {
-            background: url('https://images.unsplash.com/photo-1605902711622-cfb43c443afa') no-repeat center center fixed;
+            background: var(--imagem-fundo) no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
             color: white;
