--- a/html_css/bg_image.html
+++ b/html_css/bg_image.html
@@ -13,6 +13,7 @@
             width: 100%;
             height: 400px;
             background-image: url('comp.jpg');
+            background-repeat: no-repeat;
         }
         .back-img h2{
             padding-top: 200px;
