--- a/html_css/bg_image.html
+++ b/html_css/bg_image.html
@@ -14,6 +14,8 @@
             height: 400px;
             background-image: url('comp.jpg');
             background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
         }
         .back-img h2{
             padding-top: 200px;
