--- a/html_css/bg_image.html
+++ b/html_css/bg_image.html
@@ -14,7 +14,7 @@
             height: 400px;
             background-image: url('comp.jpg');
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: 50% 30%;
             background-size: cover;
         }
         .back-img h2{
